Web Inspector: RTL: layout issues in call frame tree elements and async call stacks https://bugs.webkit.org/show_bug.cgi?id=170419
Reviewed by Matt Baker.

* UserInterface/Views/CallFrameTreeElement.css:
(.tree-outline .item.call-frame .status):
(body[dir=ltr] .tree-outline .item.call-frame .status):
(body[dir=rtl] .tree-outline .item.call-frame .status):
Flip the current call frame indicator and make sure it sticks to the leading edge.

(.tree-outline .item.call-frame.async-boundary):
(body[dir=ltr] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary):
(body[dir=rtl] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary):
(.tree-outline .item.call-frame.async-boundary .icon):
(body[dir=ltr] .tree-outline .item.call-frame.async-boundary .icon):
(body[dir=rtl] .tree-outline .item.call-frame.async-boundary .icon):
Flip the icon's padding.

(.tree-outline .item.call-frame.async-boundary::after):
(body[dir=ltr] .tree-outline .item.call-frame.async-boundary::after):
(body[dir=rtl] .tree-outline .item.call-frame.async-boundary::after):
(.tree-outline .item.call-frame.async-boundary::before):
(body[dir=ltr] .tree-outline .item.call-frame.async-boundary::before):
(body[dir=rtl] .tree-outline .item.call-frame.async-boundary::before):
(.tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary): Deleted.
Fix the leading and trailing horizontal rules so they have correct spacing.

* UserInterface/Views/CallFrameView.css:
(.call-frame .icon): Remove redundant property.

* UserInterface/Views/DebuggerSidebarPanel.css:
(.sidebar > .panel.navigation.debugger .tree-outline.single-thread):
(body[dir=ltr] .sidebar > .panel.navigation.debugger .tree-outline.single-thread):
(body[dir=rtl] .sidebar > .panel.navigation.debugger .tree-outline.single-thread):
Fix the leading unindent for call tree frame elements.


Canonical link: https://commits.webkit.org/187346@main
git-svn-id: https://svn.webkit.org/repository/w

--- a/Source/WebInspectorUI/UserInterface/Views/CallFrameTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CallFrameTreeElement.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2016-2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,15 +26,21 @@
 .tree-outline .item.call-frame .status {
     position: absolute;
     float: none;
-    left: 1px;
+
+    --call-frame-status-start: 1px;
+    --call-frame-status-margin-start: 1px;
 }
 
 body[dir=ltr] .tree-outline .item.call-frame .status {
-    margin-left: 0;
+    left: var(--call-frame-status-start);
+    margin-left: var(--call-frame-status-margin-start);
 }
 
 body[dir=rtl] .tree-outline .item.call-frame .status {
-    margin-right: 0;
+    transform: scaleX(-1);
+
+    right: var(--call-frame-status-start);
+    margin-right: var(--call-frame-status-margin-start);
 }
 
 .tree-outline .item.call-frame .status > .status-image {
@@ -54,16 +60,34 @@ body[dir=rtl] .tree-outline .item.call-frame .status {
 .tree-outline .item.call-frame.async-boundary {
     cursor: default;
     color: var(--text-color-gray-medium);
+
+    --call-frame-async-boundary-padding-start: 5px;
+    --call-frame-async-boundary-leading-rule-margin-start: -5px;
+    --call-frame-async-boundary-leading-rule-margin-end: 1px;
+    --call-frame-async-bonudary-trailing-rule-margin-start: 2px;
 }
 
-.tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary {
-    padding-left: 5px;
+body[dir=ltr] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary {
+    padding-left: var(--call-frame-async-boundary-padding-start);
+}
+
+body[dir=rtl] .tree-outline:not(.single-thread) > .children > .item.call-frame.async-boundary {
+    padding-right: var(--call-frame-async-boundary-padding-start);
 }
 
 .tree-outline .item.call-frame.async-boundary .icon {
     float: none;
     display: inline-block;
-    margin-left: 0 !important;
+
+    --call-frame-async-boundary-icon-margin-start: 0;
+}
+
+body[dir=ltr] .tree-outline .item.call-frame.async-boundary .icon {
+    margin-left: var(--call-frame-async-boundary-icon-margin-start) !important;
+}
+
+body[dir=rtl] .tree-outline .item.call-frame.async-boundary .icon {
+    margin-right: var(--call-frame-async-boundary-icon-margin-start) !important;
 }
 
 .tree-outline .item.call-frame.async-boundary::before,
@@ -78,13 +102,28 @@ body[dir=rtl] .tree-outline .item.call-frame .status {
 
 .tree-outline .item.call-frame.async-boundary::after {
     width: 100%;
-    margin-left: 2px;
+}
+
+body[dir=ltr] .tree-outline .item.call-frame.async-boundary::after {
+    margin-left: var(--call-frame-async-bonudary-trailing-rule-margin-start);
+}
+
+body[dir=rtl] .tree-outline .item.call-frame.async-boundary::after {
+    margin-right: var(--call-frame-async-bonudary-trailing-rule-margin-start);
 }
 
 .tree-outline .item.call-frame.async-boundary::before {
     width: 30px;
-    margin-left: -5px;
-    margin-right: 1px;
+}
+
+body[dir=ltr] .tree-outline .item.call-frame.async-boundary::before {
+    margin-left: var(--call-frame-async-boundary-leading-rule-margin-start);
+    margin-right: var(--call-frame-async-boundary-leading-rule-margin-end);
+}
+
+body[dir=rtl] .tree-outline .item.call-frame.async-boundary::before {
+    margin-left: var(--call-frame-async-boundary-leading-rule-margin-end);
+    margin-right: var(--call-frame-async-boundary-leading-rule-margin-start);
 }
 
 .tree-outline.single-thread .item.call-frame.async-boundary::before {
