--- a/Source/WebInspectorUI/UserInterface/Views/CallFrameView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CallFrameView.css
@@ -33,7 +33,6 @@
     vertical-align: top;
     width: 16px;
     height: 16px;
-    margin-right: 3px;
 }
 
 .call-frame .titles {
